[package]
name = "hobo-plus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-timer = "1.0.0-beta.12"
clown = "1"
futures = "0.3"
hobo = "0.4"
js-sys = "0.3"
log = "0.4"
tap = "1"
thiserror = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom = { version = "*", features = ["js"] } # because of rand

[dependencies.web-sys]
version = "0.3"
features = [
	"IntersectionObserver",
	"IntersectionObserverInit",
	"IntersectionObserverEntry",
	"Url", "MediaSource","Blob",
	"DomRect",
]

[lints]
workspace = true
