[package]
name = "hobo-plus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-timer = "=1.0.0-beta.15"
clown = "1"
futures = "0.3"
hobo = { version = "1.0.0-rc.1", features = ["experimental"] }
js-sys = "0.3"
log = "0.4"
roxmltree = "0.20"
tap = "1"
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = "1"
postcard = { version = "1", features = ["use-std"] }
culpa = "1"

[dependencies.web-sys]
version = "0.3"
features = [
	"IntersectionObserver",
	"IntersectionObserverInit",
	"IntersectionObserverEntry",
	"Url", "MediaSource","Blob",
	"DomRect",
	"Document", "Text",
]

# [lints]
# workspace = true
